manifests/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi
spec:
  selector:
    app: strapi
  ports:
  - port: 1337
    targetPort: 1337
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
spec:
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: xbendu/cuhack-strapi:v1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
          name: web
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  selector:
    app: meilisearch
  ports:
  - port: 7700
    targetPort: 7700
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: meilisearch
spec:
  selector:
    matchLabels:
      app: meilisearch
  serviceName: meilisearch
  replicas: 1
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
      - name: meilisearch
        image: getmeili/meilisearch:v0.18.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 7700
          name: web
        volumeMounts:
        - name: data
          mountPath: /data.ms
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - strapi.yoik.software
    - meili.yoik.software
    secretName: backend-tls
  rules:
  - host: strapi.yoik.software
    http:
      paths:
      - backend:
          serviceName: strapi
          servicePort: 1337
  - host: meili.yoik.software
    http:
      paths:
      - backend:
          serviceName: meilisearch
          servicePort: 7700
